sets up for gae

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="large-12 large-text-center columns">
+    <div class="large-12 large-text-center columns" ng-if="main.songs.length">
       <div class="panel">
         <table class="songs">
           <thead>
