--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -3,6 +3,7 @@
  *  The list of settings values are listed here bower_components/foundation/scss/foundation/_settings.scss
  */
 $topbar-bg-color: #5AADBB;
+$grey: #f5f5f5;
 
 /**
  *  The import of foundation is made manually because there is still no links of the
@@ -35,6 +36,13 @@ $topbar-bg-color: #5AADBB;
   img.right {
     width: 50px;
   }
+}
+
+//main
+.comment{
+  margin:.2em;
+  padding: .2em;
+  background-color: $grey;
 }
 
 /**
