--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,6 +4,7 @@
  */
 $topbar-bg-color: #5AADBB;
 $grey: #f5f5f5;
+$aqua: #5AADBB;
 
 /**
  *  The import of foundation is made manually because there is still no links of the
@@ -38,11 +39,25 @@ $grey: #f5f5f5;
   }
 }
 
+//nav
+.title{
+  padding:1em;
+  font-size: 2em;
+  color:$grey;
+}
+
 //main
 .comment{
   margin:.2em;
   padding: .2em;
   background-color: $grey;
+}
+.song{
+   border-bottom: 1px solid $aqua;
+   margin: .4em
+}
+.logout{
+  margin-top: 1em;
 }
 
 /**
