--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,16 +1,11 @@
 <nav class="top-bar row">
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="https://github.com/Swiip/generator-gulp-angular">Gulp & Angular</a></h1>
-    </li>
-  </ul>
-
+	
   <section class="top-bar-section">
+  <span class="title">Songifier</span>
     <ul class="right">
       <li ng-class="{active: vm.$route.current.tab === 'main'}"><a ng-href="/">Home</a></li>
       <li ng-class="{active: vm.$route.current.tab === 'song'}"><a ng-href="/song">Songs</a></li>
       <li ng-class="{active: vm.$route.current.tab === 'user'}"><a ng-href="/user">User</a></li>
     </ul>
-    <p class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</p>
   </section>
 </nav>
