--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,68 +1,11 @@
 <div class="container">
-  <!-- <div class="row">
-    <div class="large-12 large-text-center columns" ng-if="main.songs.length">
-      <div class="panel">
-        <table class="songs" role="grid">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Artist</th>
-              <th>Genre</th>
-              <th>Link</th>
-              <th>User</th>
-              <th>Rank</th>
-              <th>Comments</th>
-              <th>VOTE!</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="(i, song) in main.songs | filter: search">
-              <td>{{song.name}}</td>
-              <td>{{song.artist}}</td>
-              <td>{{song.genre.name}}</td>
-              <td>{{song.link}}</td>
-              <td>{{song.user.name}}</td>
-              <td>{{song.total}}</td>
-              <td>
-                <p class="comment" ng-repeat="($i, comment) in song.comments">
-                  {{comment.text}} - {{comment.user.name}}
-                </p>
-                
-              </td>
-              <td>
-                <select ng-model="song.user_vote" name="vote" ng-change="main.vote(song, song.user_vote)" ng-options="option for option in main.vote_options">
-                </select>
-              </td>
-              <td>
-                <button ng-if="song.user.id === main.user.id" ng-click="main.edit(song)">Edit Song</button>
-                <button ng-click="main.songs[i].commenting = true" ng-if="!main.songs[i].commenting">Add Comment</button>
-                <button ng-click="main.addComment(main.songs[i]); main.songs[i].commenting = false" ng-if="main.songs[i].commenting === true" class="warning">Save Comment</button>
-
-                <textarea ng-if="main.songs[i].commenting === true" ng-model="song.newComment"></textarea>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div> -->
-
-
-<!-- <div class="row">
-  <div class="small-2 large-2 columns">Name</div>
-  <div class="small-2 large-2 columns">Artist</div>
-  <div class="small-2 large-2 columns">Genre</div>
-  <div class="small-2 large-2 columns">Link</div>
-  <div class="small-2 large-2 columns">User</div>
-  <div class="small-2 large-2 columns">Rank</div>
-  <div class="small-4 large-4 columns">Comments</div>
-  <div class="small-2 large-1 columns">VOTE!</div>
-  <div class="small-2 large-2 columns"></div>
-</div> -->
 <div class="row songs">
   <h1 class="column"></h1>
-  <div class="row song" ng-repeat="(i, song) in main.songs | filter: search">
+  <label for="genre">Limit by genre</label>
+  <select name="genre" ng-model="main.genre" ng-change="main.setGenre(main.genre)" ng-options="genre.name for genre in main.genres">
+    <option value="">-- all genres --</option>
+  </select>
+  <div class="row song" ng-repeat="(i, song) in main.songs | songsFilter: main.genre">
     <div class="small-12 columns">
       <div class="small-8 large-4 columns"><h5>Name: {{song.name}}</h5></div>
       <div class="small-8 large-4 columns">Artist: {{song.artist}}</div>
