--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,7 @@
   <select name="genre" ng-model="main.genre" ng-change="main.setGenre(main.genre)" ng-options="genre.name for genre in main.genres">
     <option value="">-- all genres --</option>
   </select>
-  <div class="row song" ng-repeat="(i, song) in main.songs | songsFilter: main.genre">
+  <div class="row song" ng-repeat="(i, song) in main.songs track by $index | songsFilter: main.genre">
     <div class="small-12 columns">
       <div class="small-8 large-4 columns"><h5>Name: {{song.name}}</h5></div>
       <div class="small-8 large-4 columns">Artist: {{song.artist}}</div>
