adds songs-editor, removes genre crap

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -4,7 +4,7 @@
   <span class="title">Songifier</span>
     <ul class="right">
       <li ng-class="{active: vm.$route.current.tab === 'main'}"><a ng-href="/">Home</a></li>
-      <li ng-class="{active: vm.$route.current.tab === 'song'}"><a ng-href="/song">Songs</a></li>
+      <li ng-class="{active: vm.$route.current.tab === 'song'}"><a ng-href="/songs">Create Songs</a></li>
       <li ng-class="{active: vm.$route.current.tab === 'user'}"><a ng-href="/user">User</a></li>
     </ul>
   </section>
