--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -60,6 +60,10 @@ $aqua: #5AADBB;
   margin-top: 1em;
 }
 
+.editSong {
+  margin-top: 1em;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
