--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,55 +1,55 @@
 <div class="container">
-<div class="row songs">
-  <h1 class="column"></h1>
-  <!-- <label for="genre">Limit by genre</label>
-  <select name="genre" ng-model="main.genre" ng-change="main.setGenre(main.genre)" ng-options="genre.name for genre in main.genres">
-    <option value="">-- all genres --</option>
-  </select> -->
-  <div class="row song" ng-repeat="(i, song) in main.songs track by $index | songsFilter: main.genre">
-    <div class="small-12 columns">
-      <div class="small-8 large-8 columns">
-        <h3>{{song.name}}</h3>
-      </div>
-      
-      <button class="small-4 editSong" ng-if="song.user.id === main.user.id" ng-click="main.edit(song)">Edit Song</button>
-    </div>
-    <div class="small-12 columns">
-      <div class="small-8 large-8 columns">
-        <h4>Artist: {{song.artist}}</h4>
-      </div>
-      <button class="small-4 editSong warning" ng-if="song.user.id === main.user.id" ng-click="main.deleteSong(song)">Delete Song</button>
-    </div>
-    <div class="small-12 columns">
-      <div class="small-12 large-12 columns" ng-show="song.link"><a ng-href="{{song.link}}" target="_blank">Link</a></div>
-    </div>
-    <div class="small-12 columns">
-      <!-- <div class="small-8 large-8 columns">Genre: {{song.genre.name}}</div> -->
-      <div class="small-8 large-8 columns">User: {{song.user.name}}</div>
-      <div class="small-8 large-8 columns">Rank: {{song.total}}</div>
-      <button class="small-4" ng-click="main.songs[i].commenting = true" ng-if="!main.songs[i].commenting">Add Comment</button>
-      <button class="small-4 warning" ng-click="main.addComment(main.songs[i]); main.songs[i].commenting = false" ng-if="main.songs[i].commenting === true" class="warning">Save Comment</button>
-    </div>
+  <div class="row songs">
+    <h1></h1>
+    <div class="row song" ng-repeat="(i, song) in main.songs track by $index | songsFilter: main.genre">
 
-    <div class="small-12 large-12 columns" ng-if="main.songs[i].commenting === true">
-      <textarea ng-model="song.newComment"></textarea>
-    </div>
+      <div class="large-9 small-12 columns">
 
-    <div class="small-12 columns">
-      <div class="small-12 large-12 columns">
-        <p class="comment" ng-repeat="($i, comment) in song.comments">
-          {{comment.text}} - {{comment.user.name}}
-        </p>
+        <div class="small-12 large-12 columns">
+          <div class="small-12 large-4 columns">
+            <h3>{{song.name}}</h3>
+          </div>
+          <div class="small-12 large-4 columns">
+            <h4>{{song.artist}}</h4>
+          </div>
+        </div>
+
+        <div class="small-12 columns">
+          <div class="small-12 large-4 columns">
+            <a ng-if="song.link" ng-href="{{song.link}}" target="_blank">Link</a>
+            <span ng-if="!song.link">(No Link)</span>
+          </div>
+          <div class="small-6 large-4 columns">User: {{song.user.name}}</div>
+          <div class="small-6 large-4 columns">Rank: {{song.total}}</div>
+        </div>
+
+        <div class="small-12 columns">
+          <div class="small-4 large-2 columns">
+            <select ng-model="song.user_vote" name="vote" ng-change="main.vote(song, song.user_vote)" ng-options="option for option in main.vote_options">
+            </select>
+          </div>
+          <div class="small-8 large-10 columns">
+            <p class="comment" ng-repeat="($i, comment) in song.comments">
+              {{comment.text}} - {{comment.user.name}}
+            </p>
+          </div>
+        </div>
+
+        <div class="small-12 large-12 columns" ng-if="main.songs[i].commenting === true">
+          <textarea ng-model="song.newComment"></textarea>
+          <button class="small-4 warning" ng-click="main.addComment(main.songs[i]); main.songs[i].commenting = false" ng-if="main.songs[i].commenting === true" class="warning">Save Comment</button>
+          <button class="small-4 secondary" ng-click="main.songs[i].commenting = false">Cancel</button>
+        </div>
       </div>
-    </div>
-    <div class="small-12 columns">
-      <div class="small-4 large-2 columns"><label for="vote">Vote:</label>
-        <select ng-model="song.user_vote" name="vote" ng-change="main.vote(song, song.user_vote)" ng-options="option for option in main.vote_options">
-        </select>
+
+      <div class="small-10 large-3 columns">
+        <button class="small-1 editSong" ng-if="song.user.id === main.user.id" ng-click="main.edit(song)">Edit</button>
+        <button class="small-1 warning deleteSong" ng-if="song.user.id === main.user.id" ng-click="main.deleteSong(song)">Delete</button>
+        <button class="small-1 commentSong" ng-click="main.songs[i].commenting = true" ng-if="!main.songs[i].commenting">Comment</button>
       </div>
-    </div>
-    
+
+    </div>   
   </div>
-</div>
 
   <div class="row" ng-if="!main.user">
     <div class="large-4 columns">
