--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,9 +3,9 @@
   <section class="top-bar-section">
   <span class="title">Songifier</span>
     <ul class="right">
-      <li ng-class="{active: vm.$route.current.tab === 'main'}"><a ng-href="/">Home</a></li>
-      <li ng-class="{active: vm.$route.current.tab === 'song'}"><a ng-href="/songs">Create Songs</a></li>
-      <li ng-class="{active: vm.$route.current.tab === 'user'}"><a ng-href="/user">User</a></li>
+      <li class="navlink" ng-class="{active: vm.$route.current.tab === 'main'}"><a ng-href="/">Home</a></li>
+      <li class="navlink" ng-class="{active: vm.$route.current.tab === 'songs'}"><a ng-href="/songs">Create Songs</a></li>
+      <li class="navlink" ng-class="{active: vm.$route.current.tab === 'user'}"><a ng-href="/user">User</a></li>
     </ul>
   </section>
 </nav>
