--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,7 @@
 
       <div class="large-9 small-12 columns">
 
-        <div class="small-12 large-12 columns">
+        <div class="small-12 large-12 columns songTitle">
           <div class="small-12 large-4 columns">
             <h3>{{song.name}}</h3>
           </div>
@@ -15,20 +15,20 @@
         </div>
 
         <div class="small-12 columns">
-          <div class="small-12 large-4 columns">
+          <div class="small-12 large-3 columns">
             <a ng-if="song.link" ng-href="{{song.link}}" target="_blank">Link</a>
             <span ng-if="!song.link">(No Link)</span>
           </div>
-          <div class="small-6 large-4 columns">User: {{song.user.name}}</div>
-          <div class="small-6 large-4 columns">Rank: {{song.total}}</div>
-        </div>
-
-        <div class="small-12 columns">
-          <div class="small-4 large-2 columns">
+          <div class="small-6 large-3 columns">User: {{song.user.name}}</div>
+          <div class="small-6 large-3 columns">Rank: {{song.total}}</div>
+          <div class="small-4 large-3 columns">
             <select ng-model="song.user_vote" name="vote" ng-change="main.vote(song, song.user_vote)" ng-options="option for option in main.vote_options">
             </select>
           </div>
-          <div class="small-8 large-10 columns">
+        </div>
+
+        <div class="small-12 columns comments">
+          <div class="small-12 large-12 columns">
             <p class="comment" ng-repeat="($i, comment) in song.comments">
               {{comment.text}} - {{comment.user.name}}
             </p>
@@ -37,7 +37,7 @@
 
         <div class="small-12 large-12 columns" ng-if="main.songs[i].commenting === true">
           <textarea ng-model="song.newComment"></textarea>
-          <button class="small-4 warning" ng-click="main.addComment(main.songs[i]); main.songs[i].commenting = false" ng-if="main.songs[i].commenting === true" class="warning">Save Comment</button>
+          <button class="small-4 warning" ng-click="main.addComment(main.songs[i]); main.songs[i].commenting = false; song.newComment = null" ng-if="main.songs[i].commenting === true" class="warning">Save Comment</button>
           <button class="small-4 secondary" ng-click="main.songs[i].commenting = false">Cancel</button>
         </div>
       </div>
