--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -5,6 +5,7 @@
     <ul class="right">
       <li class="navlink" ng-class="{active: vm.$route.current.tab === 'main'}"><a ng-href="/">Home</a></li>
       <li class="navlink" ng-class="{active: vm.$route.current.tab === 'songs'}"><a ng-href="/songs">Create Songs</a></li>
+      <li class="navlink" ng-class="{active: vm.$route.current.tab === 'name'}"><a ng-href="/name">Band Names</a></li>
       <li class="navlink" ng-class="{active: vm.$route.current.tab === 'user'}"><a ng-href="/user">User</a></li>
     </ul>
   </section>
